--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.7.2
+async-timeout==4.0.3
 attrs==23.1.0
 Django==4.2.7
 django-cors-headers==4.3.1
+django-crontab==0.7.1
+django-redis==5.4.0
+django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
@@ -16,6 +20,7 @@ PyJWT==2.8.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
+redis==5.0.1
 referencing==0.31.0
 rpds-py==0.12.0
 six==1.16.0
@@ -23,3 +28,4 @@ sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
+whitenoise==6.6.0
