--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
+gunicorn==22.0.0
 inflection==0.5.1
 jsonschema==4.19.2
 jsonschema-specifications==2023.11.1
 numpy==1.26.2
+packaging==24.0
 pandas==2.1.3
 Pillow==10.1.0
 psycopg2==2.9.9
